--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "gdsc-website",
   "type": "module",
+  "homepage": "https://pratikmagdum4.github.io/Club-website",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .jsx --fix",
     "pretty": "pnpm prettier --write .",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@lottiefiles/lottie-interactivity": "^1.6.2",
@@ -35,6 +38,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
+    "gh-pages": "^6.1.1",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "sass": "^1.71.0",
